--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,6 @@ name = "pypi"
 [packages]
 atproto = "*"
 flask = "*"
-peewee = "*"
 python-dotenv = "*"
 pandas = "<2.2.2"
 pyarrow = "*"
@@ -15,6 +14,9 @@ scikit-learn = "*"
 sentence-transformers = "*"
 faiss-cpu = "*"
 nltk = "*"
+flask-migrate = "*"
+pytest = "*"
+emoji = "*"
 
 [dev-packages]
 
