update docker deployment

--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -21,12 +21,16 @@ server {
 
     # Proxy cors anywhere requests to backend on port
     location /http {
-        proxy_pass http://cors-anywhere:80/http;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Authorization "";
+        if ($request_uri ~ ^/http([^?]*) ) {
+          set $cors_request_uri $1;
+        }
+        # docker resolver
+        resolver 127.0.0.11 ipv6=off;
+        proxy_set_header Origin "www.google.com";
+        proxy_buffer_size   128k;
+        proxy_buffers   4 256k;
+        proxy_busy_buffers_size   256k;
+        proxy_pass http://cors-anywhere:80/http$cors_request_uri$is_args$args;
     }
 
     # Serve frontend files from frontend/dist
