--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 443 ssl default_server reuseport;
     listen [::]:443 ssl default_server reuseport;
 
-    server_name yourdomain.org www.yourdomain.org;
+    server_name alpha.prism.bloomscroll.com;
 
     # Load SSL certificates
     ssl_certificate         /etc/letsencrypt/live/test-name/fullchain.pem;
