--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "aes-js": "^3.1.2",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "chartjs-adapter-moment": "^1.0.1",
     "fuse.js": "^7.1.0",
     "idb-keyval": "^6.2.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.5",
     "react-social-media-embed": "^2.5.17",
