--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     image: 651706751476.dkr.ecr.us-east-2.amazonaws.com/bloom/prism-auth
     restart: always
     env_file:
-      - ./.api-service.env
+      - ./.auth-service.env
     volumes:                                    # Storage can be either a
       - auth_static_files:/app/shared-static-files # Docker managed volume (see list at the bottom)
   cors-anywhere:
