--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,3 +1,5 @@
+resolver 127.0.0.11 ipv6=off;
+
 server {
     listen 443 ssl default_server reuseport;
     listen [::]:443 ssl default_server reuseport;
@@ -9,6 +11,21 @@ server {
     ssl_certificate_key     /etc/letsencrypt/live/test-name/privkey.pem;
     ssl_trusted_certificate /etc/letsencrypt/live/test-name/chain.pem;
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
+
+    # Serve auth-static files from frontend/dist
+    location /accounts/static {
+        root /var/www-auth;
+        try_files $uri 404;
+    }
+
+    # Proxy API requests to backend on port 8008
+    location ~ ^/(accounts|static-be|static-images|api\/user|api\/billing|api\/referral)/ {
+        proxy_pass http://auth:8040$request_uri;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
     # Proxy API requests to backend on port 8008
     location /api/ {
@@ -25,7 +42,6 @@ server {
           set $cors_request_uri $1;
         }
         # docker resolver
-        resolver 127.0.0.11 ipv6=off;
         proxy_set_header Origin "www.google.com";
         proxy_buffer_size   128k;
         proxy_buffers   4 256k;
