add 403 for auth

--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,4 +1,7 @@
 resolver 127.0.0.11 ipv6=off;
+rewrite_log on;
+error_log /var/nginx-rewrite.log notice;
+
 
 server {
     listen 443 ssl default_server reuseport;
@@ -13,9 +16,25 @@ server {
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
 
     # Serve auth-static files from frontend/dist
-    location /accounts/static {
-        root /var/www-auth;
-        try_files $uri 404;
+    location ^~ /accounts/static/ {
+        alias /var/www-auth/;
+        #try_files $uri /logo.jpg 404;
+    }
+
+    # Serve auth-admin static files from frontend/dist
+    location ^~ /adminzzz/ {
+        allow 127.0.0.1;
+        deny all;
+        proxy_pass http://auth:8040$request_uri;
+        proxy_set_header Host $host;
+    }
+
+    # Serve api-admin files from frontend/dist
+    location ^~ /adminzzz/profile {
+        allow 127.0.0.1;
+        deny all;
+        proxy_pass http://api-service:8008/api/;
+        proxy_set_header Host $host;
     }
 
     # Proxy API requests to backend on port 8008
