protect cors anywhere, add google sign in

--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -24,6 +24,7 @@ server {
     # Serve auth-admin static files from frontend/dist
     location ^~ /adminzzz/ {
         allow 127.0.0.1;
+        allow 172.18.0.1; # docker bridge
         deny all;
         proxy_pass http://auth:8040$request_uri;
         proxy_set_header Host $host;
@@ -32,6 +33,7 @@ server {
     # Serve api-admin files from frontend/dist
     location ^~ /adminzzz/profile {
         allow 127.0.0.1;
+        allow 172.18.0.1; # docker bridge
         deny all;
         proxy_pass http://api-service:8008/api/;
         proxy_set_header Host $host;
@@ -55,9 +57,10 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy cors anywhere requests to backend on port
-    location /http {
-        if ($request_uri ~ ^/http([^?]*) ) {
+    # Proxy cors anywhere requests to backend on port, only allow social media sites
+    #location ~* /https:\/\/(www.)?(instagram.com|tiktok.com|youtube.com|youtu.be)/ {
+    location ~* /https\/(www.)?(instagram.com|tiktok.com|youtube.com|youtu.be)/ {
+        if ($request_uri ~ ^/https/([^?]*) ) {
           set $cors_request_uri $1;
         }
         # docker resolver
@@ -65,7 +68,7 @@ server {
         proxy_buffer_size   128k;
         proxy_buffers   4 256k;
         proxy_busy_buffers_size   256k;
-        proxy_pass http://cors-anywhere:80/http$cors_request_uri$is_args$args;
+        proxy_pass http://cors-anywhere:80/https://$cors_request_uri$is_args$args;
     }
 
     # Serve frontend files from frontend/dist
