--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "aes-js": "^3.1.2",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "chartjs-adapter-moment": "^1.0.1",
+    "eslint-formatter-unix": "^8.40.0",
     "fuse.js": "^7.1.0",
     "idb-keyval": "^6.2.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-redux": "^7.2.2",
     "react-router": "^7.1.5",
     "react-social-media-embed": "^2.5.17",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "secure-ls": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
